--- a/style.css
+++ b/style.css
@@ -11,165 +11,419 @@ Tags: basic, clean, cruftless, naked, simple, simplicity, tersus
 */
 
 @import url("../tersus/style.css");
-@import url("../tersus//style/css/layout-advanced.css"); /* This will be better integrated in child themes soon. */
+
 
 body {
 	background: #fff;
+	color: #333;
 	border-top: 10px solid #00aeef;
 	font-family: 'Helvetica-Light',helvetica,arial,sans-serif;
+	line-height: 1.4;
 	margin: 0;
 	padding: 0;
 }
-body a, body a:visited {
+
+a, a:visited {
+	background: transparent;
 	color: #00aeef;
-}
-
-
-/* -- Header -- */
-	header {
-		background: #004a80;
-		line-height: 1.3;
-		margin: 0 0 2%;
-		padding: 2%;
-		text-shadow: rgba(0,0,0,.3) 1px 1px 1px;
-	}
-	header h1 {
-		font-size: 600%;
-		font-weight: normal;
-		letter-spacing: -5px;
-		margin: 0;
-	}
-	header p {
-		color: #fff;
-		font: normal 1.2em georgia,times,serif;
-		font-style: italic;
+	text-decoration: none;
 	}
 
-	#announcement {
-		background: rgba(255,255,255,.1) url(info.png) -25px 50% no-repeat;
-		border: 1px solid rgba(255,255,255,.5);
-		border-radius: 5px;
-		color: rgba(255,255,255,1);
-		line-height: 1;
-		margin: 0 0 2%;
-		padding: 1% 1% 1% 7%;
-		text-shadow: rgba(0,0,0,.5) 0 1px 0;
-		width: 92%;
+a:hover {
+	color: #333;
+	background: #DDD;
 	}
-	#announcement:hover {
-		border: 1px solid rgba(255,255,255,1);
+
+blockquote {
+	background: #EEE;
+	margin: 1em 2em;
+	padding: 1em;
 	}
-	#announcement h3 {
-		font-size: 1em;
-		margin: 0 0 .25em;
-		padding: 0;
+
+blockquote > p:last-child {
+	margin-bottom: 0;
 	}
-	#announcement p {
-		font: normal .8em georgia,times,serif;
-		font-style: italic;
-		margin: 0;
-		padding: 0;
+
+code {
+	background: #DDD;
+	padding: 0.3em 0.5em;
+	}
+
+.post-edit-link,
+.post-edit-link:visited,
+input[type=reset],
+input[type=submit] {
+	border: none;
+	background: #AAA;
+	color: #FFF;
+	font-size: .8em;
+	cursor: pointer;
+	padding: 5px 10px;
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	border-radius: 3px;
+	}
+
+.post-edit-link:hover,
+input[type=reset]:hover,
+input[type=submit]:hover {
+	background: #333;
+	color: #FFF;
 	}
 	
+input[type=reset]:active,
+input[type=submit]:active {
+	background: #960;
+	}
 
-/* -- Content -- */
-section#content {
-	padding: 0 2% 4%;
-}
+textarea,
+input[type=text],
+input[type=email],
+input[type=url] {
+	color: #333;
+	border: 1px solid #AAA;
+	border-radius: 3px;
+	font-size: .8em;
+	padding: .5em;
+	}
 
-section#content img.alignleft {
-	border: 1px solid #e6e6e6;
-	float: left;
-	margin: 0 2% 2% 0;
-}
-section#content img.alignright {
-	border: 1px solid #e6e6e6;
-	float: right;
-	margin: 0 0 2% 2%;
-}
+#searchform input[type=text] {
+	background: #DDD;
+	color: #333;
+	border: 1px solid transparent;
+	width: 95%;
+	}
+
+#searchform input[type=submit] {
+	display: none;
+	}
+
+/* -- Header -- */
+
+		header {
+			background: #004a80;
+			line-height: 1;
+			margin: 0;
+			padding: 2%;
+			text-shadow: rgba(0,0,0,.3) 1px 1px 1px;
+		}
+		header h1 {
+			font-size: 600%;
+			font-weight: normal;
+			letter-spacing: -5px;
+			margin: 0;
+		}
+		header p {
+			color: #fff;
+			font-size: 120%;
+			margin: 0;
+			padding: 0;
+		}
+
+		#announcement {
+			background: rgba(255,255,255,.1);
+			border: 1px solid rgba(255,255,255,.5);
+			border-radius: 5px;
+			color: rgba(255,255,255,1);
+			line-height: 1;
+			margin: 0 0 1%;
+			padding: 1.5%;
+			text-shadow: rgba(0,0,0,.5) 0 1px 0;
+			width: 97%;
+		}
+		#announcement:hover {
+			border: 1px solid rgba(255,255,255,1);
+		}
+		#announcement h3 {
+			font-size: 120%;
+			margin: 0 0 .25em;
+			padding: 0;
+		}
+		#announcement p {
+			font-size: 80%;
+		}
+
+/*
+	Content
+*/
+
+		#content {
+			background: rgba(0,0,0,.2);
+			float: left;
+			margin: 0;
+			padding: 2%;
+			width: 56%;
+			}
+
+		#content > h1 {
+			color: #960;
+			font-weight: normal;
+			font-size: 2em;
+			line-height: 1;
+			margin: 0 0 1%;
+			}
+
+		#content > h1 + p {
+			color: #AAA;
+			font: normal 1em sans-serif;
+			font-style: italic;
+			margin: 0 0 2%;
+			}
+	
+		article h2,
+		#content h2 {
+			background: transparent;
+			font-size: 300%;
+			letter-spacing: -1px;
+			line-height: 1;
+			margin: 0 0 .25em 0;
+			padding: 0;
+		}
+		#content > h2 {
+		    border-bottom: 1px solid #AAA;
+		    padding: 0 0 .75em 0;
+		    margin: 0 0 .5em 0;
+		}
+		#content ul.cat-children {
+			background: #f7f7f7;
+			line-height: 1;
+			list-style: none;
+			margin: 0 0 5%;
+			overflow: auto;
+			padding: 3%;
+			text-indent: 0;
+			}
+
+		#content ul.cat-children li {
+			list-style:none;
+			margin:0 1em 0 0;
+			padding: 0;
+			}
+
+		#content ul.cat-children li + li {
+			float: left;
+			}
+
+		#content ul.cat-children li strong {
+			color: #999;
+			font-size: 50%;
+			letter-spacing: 1px;
+			text-transform: uppercase;
+			}
+
+		#content article {
+			border-bottom: 1px solid #AAA;
+			margin: 0 0 2em 0;
+			padding: 0 0 1em 0;
+			}
+		#content article p[title] {
+			background: #00aeef;
+			box-shadow: rgba(0,0,0,0) 2px 2px 0;
+			color: #fff;
+			display: inline-block;
+			font-size: .7em;
+			font-weight: bold;
+			padding: 1% 1.5%;
+			text-transform: uppercase;
+		}
+		#content article img {
+			display: block;
+			margin: 2em 0;
+			max-width: 100%;
+		}
+		#content article img.alignleft {
+			border: 1px solid #e6e6e6;
+			float: left;
+			margin: 0 2% 2% 0;
+		}
+		#content article img.alignright {
+			border: 1px solid #e6e6e6;
+			float: right;
+			margin: 0 0 2% 2%;
+		}
+		
+
+/*
+	Post Format Styles
+*/
+
+.post-aside p + p {
+	display: none;
+	}
+
+.post-quote h2,
+.post-quote h2 + p {
+	display: none;
+	}
+
+.post-quote blockquote {
+	margin: 0 0 5%;
+	padding: 5%;
+	}
+
+.post-quote blockquote p {
+	font: normal 1.4em/1.4 georgia,times,serif;
+	margin: 0 0 .2em;
+	}
+	
+.post-quote p cite {
+	display: block;
+	font: bold 60% sans-serif;
+	text-align: right;
+	}
+	
+.post-quote blockquote + p,
+.post-quote blockquote + p + p,
+.post-quote blockquote + p + ul,
+.post-quote blockquote + p + ul + p,
+.post-quote blockquote + p + p + ul {
+	display: none;
+	}
 
 
-article p[title] {
-	background: #00aeef;
-	box-shadow: rgba(0,0,0,0) 2px 2px 0;
-	color: #fff;
-	display: inline-block;
-	font-size: .7em;
-	font-weight: bold;
-	padding: 1% 1.5%;
-	text-transform: uppercase;
-}
-aside ul li#flickrrss {
-	overflow: auto;
-}
-aside ul li#flickrrss img {
-	border: solid #e6e6e6;
-	border-width: 2%;
-	float: left;
-	margin: 0 0 2% 0;
-	width: 42%;
-}
-aside ul li#flickrrss img:nth-child(odd) {
-	margin: 0 2% 2% 2%;
-}
+	/* -- Sidebars -- */
+		aside {
+			float: right;
+			margin: 0;
+			padding: 2%;
+			width: 16%;
+		}
+		aside#sidebar-1 {
+			background: #f6f6f6;
+		}
+		aside#sidebar-2 {
+			background: #fff;
+		}
+
+	aside ul {
+		list-style: none;
+		margin: 0;
+		padding: 0;
+		text-indent: 0;
+		}
+
+	aside ul li {
+		list-style: none;
+		margin:0 0 1.5em;
+		}
+
+	aside ul li form,
+	aside ul li ul {
+		margin: 0 0 2em 0;
+		}
+
+	aside ul li ul li {
+		margin: 0;
+		}
+
+	aside ul li ul li ul {
+		margin: 0 0 0 1em;
+		}
+
+	aside h2 {
+		border-bottom: 1px solid #AAA;
+		font-size: 1em;
+		margin: 0 0 .5em 0;
+		padding: 0 0 .5em 0;
+		}
+
+	aside ul li#flickrrss {
+			overflow: auto;
+		}
+	aside ul li#flickrrss img {
+		border: solid #e6e6e6;
+		border-width: 2%;
+		float: left;
+		margin: 0 0 2% 0;
+		width: 42%;
+	}
+	aside ul li#flickrrss img:nth-child(odd) {
+		margin: 0 2% 2% 2%;
+	}
+
+	/* -- Footer -- */
+	footer {
+		background: rgba(0,0,0,.1);
+		clear: both;
+		padding: 2%;
+	}	
 
 
 /*
-	iPad - Horizontal
+	iPad Styles
 */
-@media screen and ( max-device-width: 1024px ) {
-	
-	body header, 
-	body #content,
-	body aside,
-	body footer {
-		width: 100%;
-	}
-	
-	body header h1 {
-		font-size: 340%;
-		font-weight: normal;
-		letter-spacing: -2px;
-		line-height: 1;
-	}
-	body aside {
-		background: #960;
-		color: #fff;
-		display:inline-block;
-		float: none;
-		padding: 3%;
-		width: 44%;
-	}
-	
-}
 
+/* iPad Horizontal */
+@media screen and (max-device-width: 1024px) {
+	body {
+		-webkit-text-size-adjust: 100%;
+	}
+	header,
+	footer {
+		float: none;
+		width: auto;
+	}
+	header h1 {
+		font-size: 400%;
+		letter-spacing: -3px;
+	}
+	#content {
+		width: 66%;
+	}
+	
+
+	aside {
+		clear: right;
+		float: right;
+		padding: 2%;
+		width: 26%;
+	}
+	aside * {
+		max-width: 100%;
+	}
+	
+	textarea {
+		max-width: 100%;
+	}
+}
+@media screen and (max-device-width: 768px) {
+	#content article img {
+		float: none;
+	}
+
+}
 /*
 	Small Screen Styles
 */
+/*
+@media handheld and (max-width: 480px), screen and (max-device-width: 480px), screen and (max-width: 800px) {
 
-@media handheld and ( max-width: 480px ), screen and ( max-device-width: 480px ), screen and ( max-width: 768px ) {
-	
-	body aside {
-		vertical-align: top;
-		width: 100%;
+	body {
+		-webkit-text-size-adjust: 100%;
+		padding: 1em;
 	}
 	
-	body header h1 {
-		font-size: 210%;
-		font-weight: normal;
-		letter-spacing: -1px;
-		line-height: 1;
-		margin: 0 0 .25em;
+	header,
+	#content,
+	aside,
+	footer {
+		float: none;
+		width: 95%;
 	}
-	body header p {
-		font-size: 90%;
+	
+	aside {
+		padding: 0;
 	}
-	body article h2,
-	body #content h2 {
-		font-size: 160%;
+
+	#content article img {
+		float: none;
 	}
-	body #content h2 + p {
-		font-size: 90%;
+	
+	textarea {
+		max-width: 100%;
 	}
 }
-}
+
+
+
+*/
