--- a/style.css
+++ b/style.css
@@ -105,44 +105,72 @@ Tags: basic, clean, cruftless, naked, simple, simplicity, tersus
 		background: #004a80;
 		line-height: 1;
 		margin: 0;
-		padding: 3%;
+		padding: 0;
 		text-shadow: rgba(0,0,0,.3) 1px 1px 1px;
 		}
-	header h1 {
-		font-size: 600%;
-		font-weight: normal;
+	header > h1 {
+		font-size: 420%;
+		font-weight: bold;
 		letter-spacing: -5px;
 		margin: 0;
+		padding: 1.5% 1.5% 0;
 		}
-	header p {
+	header > p {
 		color: #fff;
 		font-size: 120%;
 		margin: 0;
-		padding: 0;
+		padding: 0 1.5% 2%;
 		}
 
-	#announcement {
+	header #announcement {
 		background: rgba(255,255,255,.1);
-		border: 1px solid rgba(255,255,255,.5);
-		border-radius: 5px;
 		color: rgba(255,255,255,1);
 		line-height: 1;
-		margin: 0 0 1%;
 		padding: 1.5%;
 		text-shadow: rgba(0,0,0,.5) 0 1px 0;
 		width: 97%;
 		}
-	#announcement:hover {
-		border: 1px solid rgba(255,255,255,1);
-		}
-	#announcement h3 {
+	header #announcement h3 {
 		font-size: 120%;
 		margin: 0 0 .25em;
 		padding: 0;
 		}
-	#announcement p {
-		font-size: 80%;
+	header #announcement p {
+		font-size: 75%;
+		margin: 0;
+		padding: 0;
 		}
+	header #announcement em {
+		color: #ffe100;
+	}
+		
+	nav[role="navigation"] {
+		background: #333;
+		overflow: auto;
+	}
+	nav > a {
+		color: #fff;
+		float: left;
+		font-weight: bold;
+		padding: 1em 2em;
+		position: relative;
+		text-decoration: none;
+	}
+	nav > a:hover,
+	nav > a:visited {
+		background: #00afee;
+		color: #fff;
+	}
+	nav > a:hover:after {
+		content: "";
+		border-left: 10px solid transparent;
+		border-right: 10px solid transparent;
+		border-bottom: 10px solid #fff;
+		height: 0;
+		position: absolute;
+		width: 0;
+		bottom: 0; left: 42.5%;
+	}
 
 /* -ƒ- Content --- */
 
